# Excel_Transfer

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  COLOR_INTEGRATION_EXAMPLE.md  COLOR_STRIP_AND_REPAINT_IMPLEMENTATION.md  COMPLETED_FIXES_CHECKLIST.md  COPYFULLSHEET_ENHANCEMENT_PROGRESS.md  COPYFULLSHEET_IMPLEMENTATION_COMPLETE.md  COPY_FULL_SHEET_FIX.md  COPY_FULL_SHEET_TESTING_GUIDE.md  CUMULATIVE_COLUMNS_PROBLEM_SUMMARY.md  HYBRID_REDESIGN_INSTRUCTIONS.txt  HYBRID_TRANSFER_CODE_SUMMARY.md  HYBRID_TRANSFER_COMPILATION_FIXES.md  HYBRID_TRANSFER_COMPLETE_FIX.md  HYBRID_TRANSFER_IMPLEMENTATION.md  HYBRID_TRANSFER_PHASE_SEQUENCING_FIX.md  HYBRID_TRANSFER_STATUS.md  IGNORE_FIX_COMPLETE_ANALYSIS.md  IGNORE_FIX_FINAL.md  IGNORE_ROWS_FIX.md  IGNORE_ROWS_FIX_FINAL.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  USER_MANUAL_UPDATE_SUMMARY.md  YTD_01_2026.xlsm  analyze_ytd.py  analyze_zip.py  build_errors.txt  build_log.txt  build_log_cmd.txt  build_portable_ninja.ps1  build_standalone_portable.ps1  check_rows.py  create_portable.ps1  diagnose_cells.py  fix.py  fix_ts.py  mappingsmanager.h.bak  miniz_stub.h  (+17 more)
ExcelTransfer_Portable/: Launch.bat  README.txt
ExcelTransfer_Portable/JSON/: Traffic_mott.json  mappings.json  mappings_old.json  mappings_pax_transfer.json  mappings_sap_ytd.json
ExcelTransfer_Standalone/JSON/: Traffic_mott.json  mappings_budget_refi_prev_year.json  mappings_old.json  mappings_pax_transfer.json  mappings_sap_ytd.json  pax.json
JSON/: Traffic_mott.json  label_definitions.json  mappings.json  mappings_budget_refi_prev_year.json  mappings_old.json  mappings_pax_transfer.json  mappings_sap_ytd.json  pax.json  staff.json
build-standalone/: CMakeCache.txt
config/: mzlz_subtotals.json
core/: crashguard.h  mappingcontroller.cpp  mappingcontroller.h  mappingmodel.cpp  mappingmodel.h  mappingsmanager.cpp  mappingsmanager.h  mappingsmanager_sap_ytd.cpp  periodcontroller.cpp  periodcontroller.h  periodmodel.cpp  periodmodel.h
core/models/: periodmodel.cpp  periodmodel.h
features/mappings/: mappingpopup.cpp  mappingpopup.h  mappingrow.cpp  mappingrow.h  rowmapvalidatordialog.cpp  rowmapvalidatordialog.h
features/periods/: periodrow.cpp  periodrow.h  quarterquickselector.cpp  quarterquickselector.h  yearcard.cpp  yearcard.h
features/rollover/: rolloverworker.cpp  rolloverworker.h
features/search/: excelsearchservice.cpp  excelsearchservice.h  searchworker.cpp  searchworker.h
features/transfer/: fillallmodels.h  fillallworker.cpp  fillallworker.h  hybridtransferconfig.h  hybridworker.cpp  hybridworker.h  individualtransferpanel.cpp  individualtransferpanel.h  loadworker.cpp  loadworker.h  mappingupdater.cpp  mappingupdater.h  paralleltransfer.h  rollingtransferservice.cpp  rollingtransferservice.h  rollingworker.h  transferworker.h
services/: breaklinks.cpp  breaklinks.h  excelhandler.cpp  excelhandler.h  loadservice.cpp  loadservice.h  mappingservice.cpp  mappingservice.h  transferservice.cpp  transferservice.h
ui/: comparatortab.cpp  comparatortab.h  customtabbar.cpp  customtabbar.h  excelsearchtab.cpp  excelsearchtab.h  fillallmonthstab.cpp  fillallmonthstab.h  hybridtransfertab.cpp  hybridtransfertab.h  hybridtransfertab_redesign.cpp  ignorerowsdialog.cpp  ignorerowsdialog.h  individualtransfertab.cpp  individualtransfertab.h  main.cpp  mainwindow.cpp  mainwindow.h  sheetcellselectordialog.cpp  sheetcellselectordialog.h  toastwidget.cpp  toastwidget.h  yearrollovertab.cpp  yearrollovertab.h
